# IceFieldCreator

./: CMakeLists.txt  README.txt
data/: input_100.txt  input_50.txt  input_98.txt  input_bars.txt  input_ice.txt
src/: AABB.cpp  AABB.h  Body.cpp  Body.h  BodyVec.cpp  BodyVec.h  CollisionDetector.cpp  CollisionDetector.h  CommandLineReader.cpp  CommandLineReader.h  Contact.cpp  Contact.h  DesktopResolution.cpp  DesktopResolution.h  DynamicAabbTree.cpp  DynamicAabbTree.h  ErrorLogger.cpp  ErrorLogger.h  GUI.cpp  GUI.h  IceFieldCreator.cpp  IceFieldCreator.h  InputData.h  Main.cpp  Orientation.h  Reader.cpp  Reader.h  Shape.cpp  Shape.h  Solver.cpp  Solver.h  SolverBody.h  SolverConstraint.h  Transform.h  UserInput.h  Utils.cpp  Utils.h  Vector2.h  Writer.cpp  Writer.h
